Removed index column from subgroup csv. Modified projects to use joblib. Refining generalization notebook

--- a/Group8_Generalization.ipynb
+++ b/Group8_Generalization.ipynb
@@ -20,57 +20,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1e2e4f1d",
+   "execution_count": 17,
+   "id": "c99eca27",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Custom preprocessor for training data 'preprocess_data' saved to 'preprocess_data.joblib'. Import to transform data.\n"
+      "      ROA(C) before interest and depreciation before interest  \\\n",
+      "0                                              0.414323         \n",
+      "1                                              0.497441         \n",
+      "2                                              0.501584         \n",
+      "3                                              0.574465         \n",
+      "4                                              0.393360         \n",
+      "...                                                 ...         \n",
+      "1007                                           0.495783         \n",
+      "1008                                           0.556038         \n",
+      "1009                                           0.580705         \n",
+      "1010                                           0.459465         \n",
+      "1011                                           0.502608         \n",
+      "\n",
+      "      ROA(A) before interest and % after tax  \\\n",
+      "0                                   0.481029   \n",
+      "1                                   0.560892   \n",
+      "2                                   0.548899   \n",
+      "3                                   0.637375   \n",
+      "4                                   0.456444   \n",
+      "...                                      ...   \n",
+      "1007                                0.569178   \n",
+      "1008                                0.532054   \n",
+      "1009                                0.586731   \n",
+      "1010                                0.538378   \n",
+      "1011                                0.554568   \n",
+      "\n",
+      "      ROA(B) before interest and depreciation after tax  Tax rate (A)  \\\n",
+      "0                                              0.468280      0.000000   \n",
+      "1                                              0.546603      0.206195   \n",
+      "2                                              0.556721      0.000000   \n",
+      "3                                              0.619680      0.148902   \n",
+      "4                                              0.440334      0.000000   \n",
+      "...                                                 ...           ...   \n",
+      "1007                                           0.542749      0.147485   \n",
+      "1008                                           0.591306      0.000000   \n",
+      "1009                                           0.624284      0.063266   \n",
+      "1010                                           0.520959      0.000000   \n",
+      "1011                                           0.552439      0.019739   \n",
+      "\n",
+      "      Net Value Per Share (B)  Net Value Per Share (A)  \\\n",
+      "0                    0.172138                 0.172138   \n",
+      "1                    0.158443                 0.158443   \n",
+      "2                    0.161519                 0.161519   \n",
+      "3                    0.208124                 0.208124   \n",
+      "4                    0.174287                 0.174287   \n",
+      "...                       ...                      ...   \n",
+      "1007                 0.191606                 0.191606   \n",
+      "1008                 0.174666                 0.174666   \n",
+      "1009                 0.177110                 0.177110   \n",
+      "1010                 0.195146                 0.195146   \n",
+      "1011                 0.183979                 0.183979   \n",
+      "\n",
+      "      Net Value Per Share (C)  Persistent EPS in the Last Four Seasons  \\\n",
+      "0                    0.172138                                 0.200908   \n",
+      "1                    0.158443                                 0.225867   \n",
+      "2                    0.161519                                 0.218588   \n",
+      "3                    0.208124                                 0.272951   \n",
+      "4                    0.174287                                 0.178311   \n",
+      "...                       ...                                      ...   \n",
+      "1007                 0.191606                                 0.226813   \n",
+      "1008                 0.174666                                 0.214333   \n",
+      "1009                 0.177110                                 0.235984   \n",
+      "1010                 0.195146                                 0.216318   \n",
+      "1011                 0.183979                                 0.222747   \n",
+      "\n",
+      "      Operating Profit Per Share (Yuan ¥)  \\\n",
+      "0                                0.090221   \n",
+      "1                                0.109112   \n",
+      "2                                0.098689   \n",
+      "3                                0.128573   \n",
+      "4                                0.078332   \n",
+      "...                                   ...   \n",
+      "1007                             0.115056   \n",
+      "1008                             0.096002   \n",
+      "1009                             0.116603   \n",
+      "1010                             0.102190   \n",
+      "1011                             0.103249   \n",
+      "\n",
+      "      Per Share Net profit before tax (Yuan ¥)  ...  \\\n",
+      "0                                     0.158018  ...   \n",
+      "1                                     0.181969  ...   \n",
+      "2                                     0.171650  ...   \n",
+      "3                                     0.225427  ...   \n",
+      "4                                     0.140996  ...   \n",
+      "...                                        ...  ...   \n",
+      "1007                                  0.187994  ...   \n",
+      "1008                                  0.169767  ...   \n",
+      "1009                                  0.185885  ...   \n",
+      "1010                                  0.169089  ...   \n",
+      "1011                                  0.176922  ...   \n",
+      "\n",
+      "      Retained Earnings to Total Assets  Total expense/Assets  \\\n",
+      "0                              0.926983              0.064586   \n",
+      "1                              0.939264              0.018125   \n",
+      "2                              0.922062              0.024155   \n",
+      "3                              0.955278              0.017971   \n",
+      "4                              0.914619              0.052140   \n",
+      "...                                 ...                   ...   \n",
+      "1007                           0.939359              0.017771   \n",
+      "1008                           0.931238              0.014897   \n",
+      "1009                           0.941916              0.019829   \n",
+      "1010                           0.932750              0.048817   \n",
+      "1011                           0.942932              0.036953   \n",
+      "\n",
+      "      Current Liability to Equity  Equity to Long-term Liability  \\\n",
+      "0                        0.326981                       0.111296   \n",
+      "1                        0.328290                       0.150228   \n",
+      "2                        0.327435                       0.110933   \n",
+      "3                        0.329014                       0.123861   \n",
+      "4                        0.331120                       0.116086   \n",
+      "...                           ...                            ...   \n",
+      "1007                     0.339822                       0.120679   \n",
+      "1008                     0.328089                       0.111378   \n",
+      "1009                     0.329339                       0.117704   \n",
+      "1010                     0.329269                       0.110933   \n",
+      "1011                     0.329898                       0.113639   \n",
+      "\n",
+      "      CFO to Assets  Current Liability to Current Assets  \\\n",
+      "0          0.550336                             0.005651   \n",
+      "1          0.605500                             0.046625   \n",
+      "2          0.601102                             0.011971   \n",
+      "3          0.609402                             0.020465   \n",
+      "4          0.557723                             0.050791   \n",
+      "...             ...                                  ...   \n",
+      "1007       0.541124                             0.035177   \n",
+      "1008       0.653884                             0.052077   \n",
+      "1009       0.647025                             0.030006   \n",
+      "1010       0.643549                             0.016329   \n",
+      "1011       0.614671                             0.029941   \n",
+      "\n",
+      "      Liability-Assets Flag  Net Income to Total Assets  \\\n",
+      "0                         0                    0.761704   \n",
+      "1                         0                    0.815244   \n",
+      "2                         0                    0.806318   \n",
+      "3                         0                    0.852655   \n",
+      "4                         0                    0.741604   \n",
+      "...                     ...                         ...   \n",
+      "1007                      0                    0.809437   \n",
+      "1008                      0                    0.795545   \n",
+      "1009                      0                    0.827790   \n",
+      "1010                      0                    0.800113   \n",
+      "1011                      0                    0.809193   \n",
+      "\n",
+      "      Net Income to Stockholder's Equity  Liability to Equity  \n",
+      "0                               0.838286             0.275450  \n",
+      "1                               0.842427             0.285886  \n",
+      "2                               0.840598             0.275816  \n",
+      "3                               0.844727             0.279977  \n",
+      "4                               0.835578             0.279901  \n",
+      "...                                  ...                  ...  \n",
+      "1007                            0.841922             0.288167  \n",
+      "1008                            0.840017             0.276395  \n",
+      "1009                            0.842411             0.278794  \n",
+      "1010                            0.840305             0.277226  \n",
+      "1011                            0.841005             0.278561  \n",
+      "\n",
+      "[1012 rows x 30 columns]\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "import joblib\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "df = pd.read_csv('./test_data.csv').drop(columns=[\"Index\", \" Net Income Flag\"])\n",
+    "df_train = pd.read_csv('./train_data.csv').drop(columns=[\"Index\", \" Net Income Flag\"])\n",
+    "df_test = pd.read_csv('./test_data.csv').drop(columns=[\"Index\", \" Net Income Flag\"])\n",
     "\n",
-    "def preprocess_data(df):\n",
-    "    \"\"\"Performs standardization and feature selection on training data set\"\"\"\n",
-    "    df_bankrupt = df['Bankrupt?']\n",
-    "    df_numpy = df.to_numpy()\n",
-    "    scalar = StandardScaler()\n",
-    "    X_scaled = scalar.fit_transform(df_numpy)\n",
+    "preprocess_data = joblib.load('preprocess_data.joblib')\n",
+    "processed_features, test_features, corr_matrix = preprocess_data(df_train=df_train, df_test=df_test)\n",
     "\n",
-    "    df_scaled = pd.DataFrame(\n",
-    "        X_scaled,\n",
-    "        columns=df.columns,\n",
-    "        index=df.index\n",
-    "    )\n",
-    "    df_scaled['Bankrupt?'] = df_bankrupt #We reset bankrupt column since it does not need scaling\n",
-    "\n",
-    "    corr_matrix = df_scaled.corr()\n",
-    "\n",
-    "    bankrupt_feature = corr_matrix[\"Bankrupt?\"]\n",
-    "    abs_corr = bankrupt_feature[abs(bankrupt_feature) > 0.1]\n",
-    "    features = df_scaled[abs_corr.index.tolist()]\n",
-    "\n",
-    "    return features, corr_matrix\n",
-    "\n",
-    "joblib.dump(preprocess_data, 'preprocess_data.joblib')\n",
-    "print(\"Custom preprocessor for training data 'preprocess_data' saved to 'preprocess_data.joblib'. Import to transform data.\")"
+    "print(test_features)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf0ed8e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
