--- a/ZhengXu_Subgroup2379.ipynb
+++ b/ZhengXu_Subgroup2379.ipynb
@@ -20,10 +20,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 43,
    "id": "f803c20d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Bankrupt?   ROA(C) before interest and depreciation before interest  \\\n",
+      "0           0.0                                           0.404409          \n",
+      "1           0.0                                           1.081097          \n",
+      "2           0.0                                           0.143034          \n",
+      "3           0.0                                           0.284946          \n",
+      "4           0.0                                           1.392983          \n",
+      "...         ...                                                ...          \n",
+      "2374        0.0                                           1.114771          \n",
+      "2375        0.0                                           0.018761          \n",
+      "2376        0.0                                           0.795670          \n",
+      "2377        0.0                                           0.135016          \n",
+      "2378        0.0                                           0.532691          \n",
+      "\n",
+      "       ROA(A) before interest and % after tax  \\\n",
+      "0                                    0.213147   \n",
+      "1                                    0.933137   \n",
+      "2                                    0.120138   \n",
+      "3                                    0.314460   \n",
+      "4                                    0.805249   \n",
+      "...                                       ...   \n",
+      "2374                                 0.106021   \n",
+      "2375                                 0.357643   \n",
+      "2376                                 1.189742   \n",
+      "2377                                 0.219791   \n",
+      "2378                                 0.584353   \n",
+      "\n",
+      "       ROA(B) before interest and depreciation after tax   Tax rate (A)  \\\n",
+      "0                                              0.339428        1.031015   \n",
+      "1                                              1.141501       -0.077977   \n",
+      "2                                              0.186487        0.279131   \n",
+      "3                                              0.352463       -0.825515   \n",
+      "4                                              1.317036       -0.205464   \n",
+      "...                                                 ...             ...   \n",
+      "2374                                           0.863426        0.456599   \n",
+      "2375                                          -0.068994        0.699259   \n",
+      "2376                                           0.857343       -0.280073   \n",
+      "2377                                           0.030939        0.975239   \n",
+      "2378                                           0.460217        0.452253   \n",
+      "\n",
+      "       Net Value Per Share (B)   Net Value Per Share (A)  \\\n",
+      "0                     0.279836                  0.279974   \n",
+      "1                     0.364336                  0.364238   \n",
+      "2                     0.566888                  0.566223   \n",
+      "3                     1.126080                  1.123851   \n",
+      "4                     0.380490                  0.380347   \n",
+      "...                        ...                       ...   \n",
+      "2374                 -0.196099                 -0.194630   \n",
+      "2375                  0.597954                  0.597203   \n",
+      "2376                 -0.170003                 -0.168607   \n",
+      "2377                 -0.425989                 -0.423877   \n",
+      "2378                  0.104622                  0.105250   \n",
+      "\n",
+      "       Net Value Per Share (C)   Persistent EPS in the Last Four Seasons  \\\n",
+      "0                     0.278624                                  0.194977   \n",
+      "1                     0.362869                                  0.730232   \n",
+      "2                     0.564810                                  0.067403   \n",
+      "3                     1.122313                                  0.211617   \n",
+      "4                     0.378975                                  0.483404   \n",
+      "...                        ...                                       ...   \n",
+      "2374                 -0.195874                                 -0.143371   \n",
+      "2375                  0.595782                                  0.036896   \n",
+      "2376                 -0.169857                                  0.386337   \n",
+      "2377                 -0.425070                                  0.139510   \n",
+      "2378                  0.103940                                  0.244897   \n",
+      "\n",
+      "       Operating Profit Per Share (Yuan ¥)  ...  \\\n",
+      "0                                 0.256702  ...   \n",
+      "1                                 0.674321  ...   \n",
+      "2                                 0.087398  ...   \n",
+      "3                                 0.152298  ...   \n",
+      "4                                 0.476799  ...   \n",
+      "...                                    ...  ...   \n",
+      "2374                             -0.115768  ...   \n",
+      "2375                             -0.127055  ...   \n",
+      "2376                              0.372394  ...   \n",
+      "2377                              0.346998  ...   \n",
+      "2378                              0.220020  ...   \n",
+      "\n",
+      "       Retained Earnings to Total Assets   Total expense/Assets  \\\n",
+      "0                               0.715392              -0.427061   \n",
+      "1                               0.585408              -0.433554   \n",
+      "2                               0.139416              -0.701530   \n",
+      "3                               0.641266               0.465263   \n",
+      "4                               0.830878              -0.841994   \n",
+      "...                                  ...                    ...   \n",
+      "2374                            0.473549              -0.893111   \n",
+      "2375                            0.827527              -0.460773   \n",
+      "2376                            0.694122               0.237064   \n",
+      "2377                           -0.159400               3.481586   \n",
+      "2378                            0.370431               0.195325   \n",
+      "\n",
+      "       Current Liability to Equity   Equity to Long-term Liability  \\\n",
+      "0                        -0.058797                       -0.153845   \n",
+      "1                        -0.176740                        0.243956   \n",
+      "2                        -0.192230                       -0.109929   \n",
+      "3                        -0.264232                       -0.270609   \n",
+      "4                        -0.318512                       -0.270609   \n",
+      "...                            ...                             ...   \n",
+      "2374                     -0.294200                        0.108091   \n",
+      "2375                     -0.256374                       -0.270609   \n",
+      "2376                     -0.167936                       -0.270609   \n",
+      "2377                     -0.149503                       -0.270609   \n",
+      "2378                     -0.313135                       -0.270609   \n",
+      "\n",
+      "       CFO to Assets   Current Liability to Current Assets  \\\n",
+      "0           0.031501                             -0.183567   \n",
+      "1           0.656553                             -0.411612   \n",
+      "2           0.778097                              0.017743   \n",
+      "3           1.258892                             -0.722699   \n",
+      "4           2.075041                             -0.755376   \n",
+      "...              ...                                   ...   \n",
+      "2374        1.458810                             -0.581519   \n",
+      "2375        0.452686                             -0.561496   \n",
+      "2376        0.646467                             -0.227253   \n",
+      "2377        0.627846                             -0.670009   \n",
+      "2378        0.772957                             -0.720836   \n",
+      "\n",
+      "       Liability-Assets Flag   Net Income to Total Assets  \\\n",
+      "0                   -0.03474                     0.307406   \n",
+      "1                   -0.03474                     0.798086   \n",
+      "2                   -0.03474                     0.198214   \n",
+      "3                   -0.03474                     0.362096   \n",
+      "4                   -0.03474                     0.933262   \n",
+      "...                      ...                          ...   \n",
+      "2374                -0.03474                     0.221793   \n",
+      "2375                -0.03474                     0.460480   \n",
+      "2376                -0.03474                     1.159923   \n",
+      "2377                -0.03474                     0.196147   \n",
+      "2378                -0.03474                     0.725040   \n",
+      "\n",
+      "       Net Income to Stockholder's Equity   Liability to Equity  \n",
+      "0                                0.094670             -0.088490  \n",
+      "1                                0.186957             -0.096290  \n",
+      "2                                0.060134             -0.193388  \n",
+      "3                                0.068739             -0.302312  \n",
+      "4                                0.134434             -0.344047  \n",
+      "...                                   ...                   ...  \n",
+      "2374                             0.059451             -0.227467  \n",
+      "2375                             0.092852             -0.248494  \n",
+      "2376                             0.208048             -0.224376  \n",
+      "2377                             0.149541              0.506298  \n",
+      "2378                             0.116308             -0.312031  \n",
+      "\n",
+      "[2379 rows x 31 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -41,7 +192,9 @@
     "y_train = train_set['Bankrupt?']\n",
     "\n",
     "x_test = test_set.drop(columns='Bankrupt?')\n",
-    "y_test = test_set['Bankrupt?']"
+    "y_test = test_set['Bankrupt?']\n",
+    "\n",
+    "print(df)"
    ]
   },
   {
@@ -54,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 44,
    "id": "3665f3c8",
    "metadata": {},
    "outputs": [
@@ -63,19 +216,19 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n",
-      "Tuning time: 0.13389945030212402\n",
+      "Tuning time: 0.027377605438232422\n",
       "\n",
       "R2 values: \n",
       "   mean_score_time  mean_test_score  rank_test_score\n",
-      "0         0.015133         0.998424                1\n",
-      "1         0.019900         0.998424                1\n",
-      "2         0.024429         0.998424                1\n",
-      "3         0.027766         0.997898                4\n",
-      "4         0.025376         0.997898                4\n",
-      "5         0.025829         0.997898                4\n",
-      "6         0.024293         0.997898                4\n",
-      "7         0.021318         0.997898                4\n",
-      "8         0.018701         0.997898                4\n",
+      "0         0.001966         0.998424                1\n",
+      "1         0.002059         0.998424                1\n",
+      "2         0.002194         0.998424                1\n",
+      "3         0.002024         0.998424                1\n",
+      "4         0.001867         0.998424                1\n",
+      "5         0.002068         0.998424                1\n",
+      "6         0.001964         0.998424                1\n",
+      "7         0.001871         0.998424                1\n",
+      "8         0.001376         0.998424                1\n",
       "\n",
       "Best SVM parameters: {'C': 1}\n"
      ]
@@ -116,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 45,
    "id": "158bdb5d",
    "metadata": {},
    "outputs": [
@@ -146,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 46,
    "id": "6ee1cd7f",
    "metadata": {},
    "outputs": [
@@ -155,22 +308,22 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 12 candidates, totalling 36 fits\n",
-      "Tuning time: 0.048276424407958984\n",
+      "Tuning time: 0.04812049865722656\n",
       "\n",
       "R2 values: \n",
       "    mean_score_time  mean_test_score  rank_test_score\n",
-      "0          0.001305         0.998424                1\n",
-      "1          0.001251         0.998424                1\n",
-      "2          0.001281         0.998424                1\n",
-      "3          0.001251         0.998424                1\n",
-      "4          0.001194         0.998424                1\n",
-      "5          0.001308         0.998424                1\n",
-      "6          0.001432         0.998424                1\n",
-      "7          0.001435         0.998424                1\n",
-      "8          0.001277         0.998424                1\n",
-      "9          0.001244         0.998424                1\n",
-      "10         0.001035         0.997373               12\n",
-      "11         0.000934         0.997898               11\n",
+      "0          0.001084         0.998424                1\n",
+      "1          0.001072         0.998424                1\n",
+      "2          0.001051         0.998424                1\n",
+      "3          0.000976         0.998424                1\n",
+      "4          0.001253         0.998424                1\n",
+      "5          0.001256         0.998424                1\n",
+      "6          0.001086         0.998424                1\n",
+      "7          0.001097         0.998424                1\n",
+      "8          0.001214         0.998424                1\n",
+      "9          0.001181         0.998424                1\n",
+      "10         0.000885         0.996847               12\n",
+      "11         0.000831         0.997898               11\n",
       "\n",
       "Best logistic regression parameters: {'C': 0.0001, 'penalty': 'l1'}\n"
      ]
@@ -212,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 47,
    "id": "d0f03c3c",
    "metadata": {},
    "outputs": [
@@ -242,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 48,
    "id": "869ef292",
    "metadata": {},
    "outputs": [
@@ -251,18 +404,18 @@
      "output_type": "stream",
      "text": [
       "Fitting 3 folds for each of 6 candidates, totalling 18 fits\n",
-      "Tuning time: 0.025127410888671875\n",
+      "Tuning time: 0.024627685546875\n",
       "\n",
       "R2 values: \n",
       "   mean_score_time  mean_test_score  rank_test_score\n",
-      "0         0.001381         0.998424                1\n",
-      "1         0.001338         0.998424                1\n",
-      "2         0.001263         0.998424                1\n",
-      "3         0.001354         0.998424                1\n",
-      "4         0.000884         0.998424                1\n",
-      "5         0.000812         0.998424                1\n",
+      "0         0.001116         0.997898                3\n",
+      "1         0.001116         0.995795                4\n",
+      "2         0.001150         0.990540                5\n",
+      "3         0.001009         0.968995                6\n",
+      "4         0.000866         0.998424                1\n",
+      "5         0.001149         0.998424                1\n",
       "\n",
-      "Best Naive Bayes parameters: {'var_smoothing': 0.0001}\n"
+      "Best Naive Bayes parameters: {'var_smoothing': 1}\n"
      ]
     }
    ],
@@ -301,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 49,
    "id": "fd5b0031",
    "metadata": {},
    "outputs": [
@@ -332,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 50,
    "id": "039ba945",
    "metadata": {},
    "outputs": [
@@ -376,6 +529,29 @@
    "metadata": {},
    "source": [
     "This data set is very sparse and may not necessarily be a good representative of the final model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "f7fec354",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['stacking_model_zx.joblib']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "joblib.dump(stacking_model.predict, 'stacking_model_zx.joblib')"
    ]
   }
  ],
